@@ -7,6 +7,7 @@ CHANGELOG RoundCube Webmail
 - Better fix for skipping untagged responses (#1485261)
 - Added pspell support patch by Kris Steinhoff (#1483960)
 - Enable spellchecker for HTML editor (#1485114)
+- Respect spellcheck_uri in tinyMCE spellchecker (#1484196)
 
 2008/08/09 (alec)
 ----------
